# mod_log_scribe

./: .gitignore  Makefile.am  README  build.sh  configure.ac  mod_log_scribe.c
scribe-cpp/: Makefile  Makefile.am  scribe_c.cpp  test.c
